--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,2 +1,2 @@
-<a href="https://webpages.charlotte.edu/itis3135">Link to ITIS3135 Pages</a>
+<a href="itis3135/"> Click here for 3135 Course </a>
 <h1>I am Nathaniel Hayes </h1>
