--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -38,7 +38,7 @@
     <a href="https://www.codecademy.com/profiles/NathanielHayes">CodeAcademy</a>
     ||
     <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn<br></a>
-    <p>Designed by: Hayes Designs © 2024<br></p>
+    <p>Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a> © 2024<br></p>
     <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
         <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
        </a>
