--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -85,7 +85,7 @@
             <a href="https://www.codecademy.com/profiles/NathanielHayes">CodeAcademy</a>
             ||
             <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn<br></a>
-            <p id="designed-by">Designed by: Hayes Designs © 2024<br></p>
+            <p id="designed-by">Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a> © 2024<br></p>
             <a href="https://validator.w3.org/check?uri=referer"
                 id="validation_link_html">
                 <img style="border:0;width:88px;height:31px"
