--- a/itis3135/hayesdesigns.com/index.html
+++ b/itis3135/hayesdesigns.com/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 Hayes Designs</title>
-        <link rel="stylesheet" href="styles/b.css">
+
     </head>
     <body>
 
@@ -54,16 +54,18 @@ footer{
   a:visited{
     color: black;
   }
+
+  .horizontal-bar {
+    width: 50%;
+    height: 3px; 
+    background-color: #333; 
+    margin: 20px 0; 
+    margin: 0 auto;
+  }
         </style>
         <header>
             <h1>Hayes Designs</h1>
-            <nav>
-                <a href="./">Home</a>
-                ||
-                <a href="introduction.html">Introduction</a>
-                ||
-                <a href="contract.html">Contract</a>
-            </nav>
+            <div class="horizontal-bar"></div>
         </header>
         <main>
             <h2>Company Homepage</h2>
