--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -22,7 +22,7 @@
         </nav>
         </header>
 <main>
-    <h3>Account Creation Form<Form></Form></h3>
+    <h3>Account Creation Form</h3>
     <form action="#" method="post" id="businessForm">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required placeholder="Enter your name">
