--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -82,7 +82,7 @@
 
                 <table class="employee-table">
                     <tr>
-                        <th scope="col">Department</th>
+                        <th scope="col" id="department-header">Department</th>
                         <th scope="col">Name</th>
                         <th scope="col">Email</th>
                         <th scope="col">Years of Service</th>
