changed page title names, linked introduction to b.css, and fixed contract signature with italics.

--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 Contract</title>
+    <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Contract</title>
     <link rel="stylesheet" href="styles/b.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
     <p>I, Nathaniel A. Hayes agree to abide by the terms in my Spring 2024 ITIS-3135-091 Web Based App Design and Development with my instructor,  D.I. Von Briessen.<br></p>
     <p>I understand that all work that I do on my school and personal websites will be publicly available to the world. I will not put information there that is inappropriate for schoolwork, or that I wish to keep private.<br></p>
     <p>Signed:<br></p>
-    <p>Nathaniel A. Hayes, 23 January 2024</p>
+    <p><em class="italic-text">Nathaniel A. Hayes</em>, 23 January 2024</p>
 </main>
 <footer>
     <a href="https://webpages.charlotte.edu/nhayes12/">Charlotte.edu</a>
