--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 Introduction</title>
-        <link rel="stylesheet" href="styles/i.css">
+        <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Introduction</title>
+        <link rel="stylesheet" href="styles/b.css">
     </head>
     <body>
         <header>
