working on firm expansion

--- a/itis3135/hayesdesigns.com/index.html
+++ b/itis3135/hayesdesigns.com/index.html
@@ -7,64 +7,13 @@
 
     </head>
     <body>
-
+        <!--https://coolors.co/06070e-706c61-eddfef-ffe66d-a1e8cc-->
         <style>
-            body{
-                
-    background-color: lightblue;
 
-            }
-
-            h1{
-    font-family: 'Lato', sans-serif;
-    text-align: center;
-    margin-top: 1;
-    
-}
-
-header{
-    font-family: 'Lato', sans-serif;
-    text-align: center;
-    margin-top: 1;
-
-}
-
-h2{
-    font-family: 'Lato', sans-serif;
-    text-align: center;
-    margin-top: 1;
-    padding-top: 20px;
-}
-
-p{
-    font-family: 'Lato', sans-serif;
-    text-align: center;
-}
-
-footer{
-    font-family: 'Lato', sans-serif;
-    text-align:center;
-}
-
-
-  a{
-    color: yellow;
-  }
-
-  a:visited{
-    color: black;
-  }
-
-  .horizontal-bar {
-    width: 50%;
-    height: 3px; 
-    background-color: #333; 
-    margin: 20px 0; 
-    margin: 0 auto;
-  }
         </style>
         <header>
             <h1>Hayes Designs</h1>
+            <img src="itis3135\images\companylogo.jpeg" alt="description">
             <div class="horizontal-bar"></div>
         </header>
         <main>
