--- a/itis3135/hayesdesigns.com/index.html
+++ b/itis3135/hayesdesigns.com/index.html
@@ -119,7 +119,32 @@
                     href="mailto:info@hayesdesigns.com">info@hayesdesigns.com</a></p>
             <p>Phone: (111)-123-4567</p>
             <p>Address: 123 Wall Street, New York, NY 10005</p>
-            <p>Where Your Vision Takes Shape Online! © 2024</p>
+            <a href="https://webpages.charlotte.edu/nhayes12/">Charlotte.edu</a>
+    ||
+    <a href="https://github.com/deniablesole/deniablesole.github.io">GitHub</a>
+    ||
+    <a href="https://deniablesole.github.io/">GitHub.io</a>
+    ||
+    <a href="https://github.com/Deniablesole/Deniablesole.github.io/tree/main/itis3135">itis3135.io</a>
+    ||
+    <a href="https://www.freecodecamp.org/NathanielHayes">FreeCodeCamp</a>
+    ||
+    <a href="https://www.codecademy.com/profiles/NathanielHayes">CodeAcademy</a>
+    ||
+    <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn<br></a>
+    <p>Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a> © 2024<br></p>
+    <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
+        <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
+       </a>
+       <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
+        <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
+         </a>
+       
+       <script>
+          document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
+               document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+       </script>
+            <p>Where Your Vision Takes Shape Online!</p>
         </footer>
     </body>
 </html>
