--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -22,6 +22,9 @@
             ||
             <a href="website_evaluations.html">Website Evaluations</a>
         </nav>
+        <nav>
+            <a href="/itis3135/stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
+        </nav>
         </header>
 <main>
     <h3>Account Creation Form</h3>
