--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -22,6 +22,9 @@
                 ||
                 <a href="website_evaluations.html">Website Evaluations</a>
             </nav>
+            <nav>
+                <a href="/itis3135/stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
+            </nav>
         </header>
         <main>
             <h2>HTML Tables</h2>
