--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -42,6 +42,9 @@
             ||
             <a href="website_evaluations.html">Website Evaluations</a>
         </nav>
+        <nav>
+            <a href="/itis3135/stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
+        </nav>
         </header>
 <main>
     <h2>Website Evaluations</h2>
