--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -43,7 +43,7 @@
             <a href="website_evaluations.html">Website Evaluations</a>
         </nav>
         <nav>
-            <a href="/itis3135/stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
+            <a href="">CRAPPY Website</a>
         </nav>
         </header>
 <main>
