--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -23,7 +23,7 @@
             <a href="website_evaluations.html">Website Evaluations</a>
         </nav>
         <nav>
-            <a href="/itis3135/stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
+            <a href="stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
         </nav>
         </header>
 <main>
