updated website homepage

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,2 +1,81 @@
-<a href="itis3135/"> Click here for 3135 Course </a>
-<h1>I am Nathaniel Hayes </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nathaniel Hayes | Personal Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            text-align: center;
+        }
+        header {
+            background-color: #333;
+            padding: 10px 0;
+            color: #fff;
+            margin-bottom: 20px;
+        }
+        header a {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-right: 10px;
+            transition: background-color 0.3s ease;
+        }
+        header a:hover {
+            background-color: #0056b3;
+        }
+        h1 {
+            color: #333;
+            margin-top: 50px;
+            font-size: 36px;
+            padding-bottom: 20px;
+        }
+        .button-group {
+            margin-top: 20px;
+        }
+        .button-group a {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-right: 10px;
+            transition: background-color 0.3s ease;
+        }
+        .button-group a:hover {
+            background-color: #0056b3;
+        }
+        .button-group a:last-child {
+            margin-right: 0;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+</header>
+
+<div class="container">
+    <h1>Nathaniel Hayes Personal Website</h1>
+    <div class="button-group">
+        <a href="itis3135/">ITIS 3135 Course</a>
+        <a href="https://github.com/Deniablesole">GitHub</a>
+        <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn</a>
+    </div>
+</div>
+
+</body>
+</html>
