added view resume to home page

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -74,6 +74,7 @@
         <a href="itis3135/">ITIS 3135 Course</a>
         <a href="https://github.com/Deniablesole">GitHub</a>
         <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn</a>
+        <a href="Nathaniel_Resume.pdf" target="_blank">View Resume</a>
     </div>
 </div>
 
