--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -1,118 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Introduction</title>
-        <link rel="stylesheet" href="styles/b.css">
-    </head>
-    <body>
-        <header>
-            <h1>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135</h1>
-            <nav>
-                <a href="./">Home</a>
-                ||
-                <a href="introduction.html">Introduction</a>
-                ||
-                <a href="contract.html">Contract</a>
-                ||
-                <a href="tables.html">Tables</a>
-                ||
-                <a href="forms.html">Form</a>
-                ||
-                <a href="website_evaluations.html">Website Evaluations</a>
-            </nav>
-            <nav>
-                <a href="stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
-            </nav>
-        </header>
-        <main>
-            <h2>Introduction</h2>
-            <figure>
-                <img id="introduction-image" src="images/IMG_5146.jpeg"
-                    alt="Picture of me">
-                <figcaption>This is a picutre I took of myself</figcaption>
-            </figure>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Introduction
+    </title>
+    <link rel="stylesheet" href="styles/b.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135</h1>
+      <nav>
+        <a href="./">Home</a>
+        ||
+        <a href="introduction.html">Introduction</a>
+        ||
+        <a href="contract.html">Contract</a>
+        ||
+        <a href="tables.html">Tables</a>
+        ||
+        <a href="forms.html">Form</a>
+        ||
+        <a href="website_evaluations.html">Website Evaluations</a>
+      </nav>
+      <nav>
+        <a href="stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
+      </nav>
+    </header>
+    <main>
+      <h2>Introduction</h2>
+      <figure>
+        <img
+          id="introduction-image"
+          src="images/IMG_5146.jpeg"
+          alt="Picture of me"
+        />
+        <figcaption>This is a picutre I took of myself</figcaption>
+      </figure>
 
-            <h3>Personal Background:</h3>
-            <p>Born in Florida,moved to North Carolina when I was three.</p>
+      <h3>Personal Background:</h3>
+      <p>Born in Florida,moved to North Carolina when I was three.</p>
 
-            <h3>Professional Background:</h3>
-            <p>Worked at a gas station for four years.</p>
+      <h3>Professional Background:</h3>
+      <p>Worked at a gas station for four years.</p>
 
-            <h3>Academic Background:</h3>
-            <p>Junior Computer Science major at UNCC.</p>
+      <h3>Academic Background:</h3>
+      <p>Junior Computer Science major at UNCC.</p>
 
-            <h3>Background in this Subject:</h3>
-            <p>Taken a couple CS classes and a year of coding.</p>
+      <h3>Background in this Subject:</h3>
+      <p>Taken a couple CS classes and a year of coding.</p>
 
-            <h3>Primary Computer Platform:</h3>
-            <p>Windows 10/11</p>
+      <h3>Primary Computer Platform:</h3>
+      <p>Windows 10/11</p>
 
-            <h3>Courses I'm Taking & Why:</h3>
-            <ul>
-                <li><strong>ITIS3135 -Web App Design and Development</strong> -
-                    I have learned a little bit of html and javascript and it
-                    got me more interested in learning about web based
-                    development.
-                </li>
-                <li><strong>ITCS3160 - Database Design and Implementation</strong>
-                    -
-                    I know sql is a sought after language for employers so I
-                    thought it would be beneficial to start learning about
-                    databases.
-                </li>
-                <li><strong>ITIS3200 - Intro to Security and Privacy</strong>- I
-                    am taking this course because I have an interest in the
-                    cybersecurity field.
-                </li>
-                <li><strong>ITSC2175 - Logic and Algorithm</strong>- I am taking
-                    this course because it is required for my degree.
+      <h3>Courses I'm Taking & Why:</h3>
+      <ul>
+        <li>
+          <strong>ITIS3135 -Web App Design and Development</strong> - I have
+          learned a little bit of html and javascript and it got me more
+          interested in learning about web based development.
+        </li>
+        <li>
+          <strong>ITCS3160 - Database Design and Implementation</strong>
+          - I know sql is a sought after language for employers so I thought it
+          would be beneficial to start learning about databases.
+        </li>
+        <li>
+          <strong>ITIS3200 - Intro to Security and Privacy</strong>- I am taking
+          this course because I have an interest in the cybersecurity field.
+        </li>
+        <li>
+          <strong>ITSC2175 - Logic and Algorithm</strong>- I am taking this
+          course because it is required for my degree.
+        </li>
+      </ul>
 
-                </li>
-            </ul>
+      <h3>Funny/Interesting Item to Remember me by:</h3>
+      <p>Go Panthers.</p>
 
-            <h3>Funny/Interesting Item to Remember me by:</h3>
-            <p> Go Panthers.</p>
+      <h3>I'd also like to Share:</h3>
+      <p>Lebron James is the best basketball player of all time.</p>
+    </main>
+    <footer>
+      <a href="https://webpages.charlotte.edu/nhayes12/">Charlotte.edu</a>
+      ||
+      <a href="https://github.com/deniablesole/deniablesole.github.io"
+        >GitHub</a
+      >
+      ||
+      <a href="https://deniablesole.github.io/">GitHub.io</a>
+      ||
+      <a
+        href="https://github.com/Deniablesole/Deniablesole.github.io/tree/main/itis3135"
+        >itis3135.io</a
+      >
+      ||
+      <a href="https://www.freecodecamp.org/NathanielHayes">FreeCodeCamp</a>
+      ||
+      <a href="https://www.codecademy.com/profiles/NathanielHayes"
+        >CodeAcademy</a
+      >
+      ||
+      <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn<br /></a>
+      <p id="designed-by">
+        Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a>,
+        <a
+          href="https://www.freecodecamp.org/certification/NathanielHayes/responsive-web-design"
+          >Certified in RWD</a
+        >
+        © 2024<br />
+      </p>
+      <a
+        href="https://validator.w3.org/check?uri=referer"
+        id="validation_link_html"
+      >
+        <img
+          style="border: 0; width: 88px; height: 31px"
+          src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png"
+          alt="Valid HTML!"
+        />
+      </a>
+      <a
+        href="https://jigsaw.w3.org/css-validator/check/referer"
+        id="validation_link_css"
+      >
+        <img
+          style="border: 0; width: 88px; height: 31px"
+          src="https://jigsaw.w3.org/css-validator/images/vcss"
+          alt="Valid CSS!"
+        />
+      </a>
 
-            <h3>I'd also like to Share:</h3>
-            <p> Lebron James is the best basketball player of all time.</p>
-
-        </main>
-        <footer>
-            <a href="https://webpages.charlotte.edu/nhayes12/">Charlotte.edu</a>
-            ||
-            <a href="https://github.com/deniablesole/deniablesole.github.io">GitHub</a>
-            ||
-            <a href="https://deniablesole.github.io/">GitHub.io</a>
-            ||
-            <a
-                href="https://github.com/Deniablesole/Deniablesole.github.io/tree/main/itis3135">itis3135.io</a>
-            ||
-            <a href="https://www.freecodecamp.org/NathanielHayes">FreeCodeCamp</a>
-            ||
-            <a href="https://www.codecademy.com/profiles/NathanielHayes">CodeAcademy</a>
-            ||
-            <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn<br></a>
-            <p id="designed-by">Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a> © 2024<br></p>
-            <a href="https://validator.w3.org/check?uri=referer"
-                id="validation_link_html">
-                <img style="border:0;width:88px;height:31px"
-                    src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png"
-                    alt="Valid HTML!">
-            </a>
-            <a href="https://jigsaw.w3.org/css-validator/check/referer"
-                id="validation_link_css">
-                <img style="border:0;width:88px;height:31px"
-                    src="https://jigsaw.w3.org/css-validator/images/vcss"
-                    alt="Valid CSS!">
-            </a>
-
-            <script>
-          document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
-               document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-       </script>
-
-        </footer>
-    </body>
+      <script>
+        document
+          .getElementById("validation_link_html")
+          .setAttribute(
+            "href",
+            "https://validator.w3.org/check?uri=" + location.href
+          );
+        document
+          .getElementById("validation_link_css")
+          .setAttribute(
+            "href",
+            "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href
+          );
+      </script>
+    </footer>
+  </body>
 </html>
