--- a/itis3135/hayesdesigns.com/index.html
+++ b/itis3135/hayesdesigns.com/index.html
@@ -1,150 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Hayes
-            Designs</title>
-            <!--https://coolors.co/12100e-89b0ae-f5e5fc-7d6167-6c698d-->
-        <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #12100E; 
-            color: #F5E5FC; 
-            margin: 0;
-            padding: 0;
-        }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Hayes Designs
+    </title>
+    <!--https://coolors.co/12100e-89b0ae-f5e5fc-7d6167-6c698d-->
+    <style>
+      body {
+        font-family: "Arial", sans-serif;
+        background-color: #12100e;
+        color: #f5e5fc;
+        margin: 0;
+        padding: 0;
+      }
 
-        h1{
-            padding-left: 10px;
-        }
+      h1 {
+        padding-left: 10px;
+      }
 
-        header {
-            background-color: #89B0AE; 
-            padding: 10px;
-        }
+      header {
+        background-color: #89b0ae;
+        padding: 10px;
+      }
 
-        .header-container {
-            display: flex;
-            align-items: center;
-        }
+      .header-container {
+        display: flex;
+        align-items: center;
+      }
 
-        .company-name {
-            margin-right: 20px;
-            line-height: 1;
-            color: #F5E5FC; 
-        }
+      .company-name {
+        margin-right: 20px;
+        line-height: 1;
+        color: #f5e5fc;
+      }
 
-        img {
-            max-width: 5%;
-            max-height: 5%;
-        }
+      img {
+        max-width: 5%;
+        max-height: 5%;
+      }
 
-        .amazing-list {
-            list-style-type: none;
-            padding: 0;
-            color: #7D6167; 
-        }
+      .amazing-list {
+        list-style-type: none;
+        padding: 0;
+        color: #7d6167;
+      }
 
-        .amazing-list li {
-            margin-bottom: 10px;
-            position: relative;
-            padding-left: 20px;
-        }
+      .amazing-list li {
+        margin-bottom: 10px;
+        position: relative;
+        padding-left: 20px;
+      }
 
-        .amazing-list li::before {
-            content: '\2022';
-            color: #6C698D; 
-            font-size: 1.5em;
-            position: absolute;
-            left: 0;
-            top: 50%;
-            transform: translateY(-50%);
-        }
+      .amazing-list li::before {
+        content: "\2022";
+        color: #6c698d;
+        font-size: 1.5em;
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+      }
 
-        main {
-            padding: 20px;
-        }
+      main {
+        padding: 20px;
+      }
 
-        footer {
-            background-color: #89B0AE; 
-            padding: 10px;
-            color: #12100E; 
-            text-align: center;
-        }
+      footer {
+        background-color: #89b0ae;
+        padding: 10px;
+        color: #12100e;
+        text-align: center;
+      }
 
-        footer a {
-            color: #6C698D; 
-        }
+      footer a {
+        color: #6c698d;
+      }
 
-        footer a:link {
-            color: #F5E5FC; 
-        }
+      footer a:link {
+        color: #f5e5fc;
+      }
 
-        footer a:visited {
-            color: #7D6167; 
-        }
+      footer a:visited {
+        color: #7d6167;
+      }
 
-        footer a:hover{
-            color: #6C698D;
-        }
+      footer a:hover {
+        color: #6c698d;
+      }
     </style>
-    </head>
-    <body>
-        <header>
-            <div class="header-container">
-                <img src="images/companylogo.jpeg"
-                    alt="Hayes Designs company logo">
-                <h1 class="company-name">Hayes Designs</h1>
-            </div>
-            <div class="horizontal-bar"></div>
-        </header>
-        <main>
-            <h2>Hayes Designs Services</h2>
-            <p>Here at Hayes Designs, we specialize in creating a variety of
-                digital marketing tools and software.</p>
-            <ul class="amazing-list">
-                <li>We deliver innovative and custom marketing solutions.</li>
-                <li>Our team is committed to excellence and creativity.</li>
-                <li>We prioritize customer satisfaction in every project.</li>
-                <li>Hayes Designs has won multiple design awards.</li>
-                <li>Commercial and personal solutions.</li>
-            </ul>
-            <p>We would like to provide customers with the best tools,
-                custom-made for them to achieve their marketing goals.</p>
-        </main>
-        <footer>
-            <p>Contact Us:</p>
-            <p>Email: <a
-                    href="mailto:info@hayesdesigns.com">info@hayesdesigns.com</a></p>
-            <p>Phone: (111)-123-4567</p>
-            <p>Address: 123 Wall Street, New York, NY 10005</p>
-            <a href="https://webpages.charlotte.edu/nhayes12/">Charlotte.edu</a>
-    ||
-    <a href="https://github.com/deniablesole/deniablesole.github.io">GitHub</a>
-    ||
-    <a href="https://deniablesole.github.io/">GitHub.io</a>
-    ||
-    <a href="https://github.com/Deniablesole/Deniablesole.github.io/tree/main/itis3135">itis3135.io</a>
-    ||
-    <a href="https://www.freecodecamp.org/NathanielHayes">FreeCodeCamp</a>
-    ||
-    <a href="https://www.codecademy.com/profiles/NathanielHayes">CodeAcademy</a>
-    ||
-    <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn<br></a>
-    <p>Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a> © 2024<br></p>
-    <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-        <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-       </a>
-       <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
-        <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
-         </a>
-       
-       <script>
-          document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
-               document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-       </script>
-            <p>Where Your Vision Takes Shape Online!</p>
-        </footer>
-    </body>
+  </head>
+  <body>
+    <header>
+      <div class="header-container">
+        <img src="images/companylogo.jpeg" alt="Hayes Designs company logo" />
+        <h1 class="company-name">Hayes Designs</h1>
+      </div>
+      <div class="horizontal-bar"></div>
+    </header>
+    <main>
+      <h2>Hayes Designs Services</h2>
+      <p>
+        Here at Hayes Designs, we specialize in creating a variety of digital
+        marketing tools and software.
+      </p>
+      <ul class="amazing-list">
+        <li>We deliver innovative and custom marketing solutions.</li>
+        <li>Our team is committed to excellence and creativity.</li>
+        <li>We prioritize customer satisfaction in every project.</li>
+        <li>Hayes Designs has won multiple design awards.</li>
+        <li>Commercial and personal solutions.</li>
+      </ul>
+      <p>
+        We would like to provide customers with the best tools, custom-made for
+        them to achieve their marketing goals.
+      </p>
+    </main>
+    <footer>
+      <p>Contact Us:</p>
+      <p>
+        Email: <a href="mailto:info@hayesdesigns.com">info@hayesdesigns.com</a>
+      </p>
+      <p>Phone: (111)-123-4567</p>
+      <p>Address: 123 Wall Street, New York, NY 10005</p>
+      <a href="https://webpages.charlotte.edu/nhayes12/">Charlotte.edu</a>
+      ||
+      <a href="https://github.com/deniablesole/deniablesole.github.io"
+        >GitHub</a
+      >
+      ||
+      <a href="https://deniablesole.github.io/">GitHub.io</a>
+      ||
+      <a
+        href="https://github.com/Deniablesole/Deniablesole.github.io/tree/main/itis3135"
+        >itis3135.io</a
+      >
+      ||
+      <a href="https://www.freecodecamp.org/NathanielHayes">FreeCodeCamp</a>
+      ||
+      <a href="https://www.codecademy.com/profiles/NathanielHayes"
+        >CodeAcademy</a
+      >
+      ||
+      <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn<br /></a>
+      <p>
+        Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a>,
+        <a
+          href="https://www.freecodecamp.org/certification/NathanielHayes/responsive-web-design"
+          >Certified in RWD</a
+        >
+        © 2024<br />
+      </p>
+      <a
+        href="https://validator.w3.org/check?uri=referer"
+        id="validation_link_html"
+      >
+        <img
+          style="border: 0; width: 88px; height: 31px"
+          src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png"
+          alt="Valid HTML!"
+        />
+      </a>
+      <a
+        href="https://jigsaw.w3.org/css-validator/check/referer"
+        id="validation_link_css"
+      >
+        <img
+          style="border: 0; width: 88px; height: 31px"
+          src="https://jigsaw.w3.org/css-validator/images/vcss"
+          alt="Valid CSS!"
+        />
+      </a>
+
+      <script>
+        document
+          .getElementById("validation_link_html")
+          .setAttribute(
+            "href",
+            "https://validator.w3.org/check?uri=" + location.href
+          );
+        document
+          .getElementById("validation_link_css")
+          .setAttribute(
+            "href",
+            "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href
+          );
+      </script>
+      <p>Where Your Vision Takes Shape Online!</p>
+    </footer>
+  </body>
 </html>
