--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,62 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Homepage</title>
-    <link rel="stylesheet" href="styles/b.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/b.css" />
+  </head>
+  <body>
     <header>
-        <h1>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135</h1>
-        <nav>
-            <a href="./">Home</a>
-            ||
-            <a href="introduction.html">Introduction</a>
-            ||
-            <a href="contract.html">Contract</a>
-            ||
-            <a href="tables.html">Tables</a>
-            ||
-            <a href="forms.html">Form</a>
-            ||
-            <a href="website_evaluations.html">Website Evaluations</a>
-        </nav>
-        <nav>
-            <a href="stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
-        </nav>
-        </header>
-<main>
-    <h2>ITIS 3135 Homepage</h2>
-    <p>This is all the content for my ITIS 3135 class.</p>
-</main>
-<footer>
-    <a href="https://webpages.charlotte.edu/nhayes12/">Charlotte.edu</a>
-    ||
-    <a href="https://github.com/deniablesole/deniablesole.github.io">GitHub</a>
-    ||
-    <a href="https://deniablesole.github.io/">GitHub.io</a>
-    ||
-    <a href="https://github.com/Deniablesole/Deniablesole.github.io/tree/main/itis3135">itis3135.io</a>
-    ||
-    <a href="https://www.freecodecamp.org/NathanielHayes">FreeCodeCamp</a>
-    ||
-    <a href="https://www.codecademy.com/profiles/NathanielHayes">CodeAcademy</a>
-    ||
-    <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn<br></a>
-    <p>Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a> © 2024<br></p>
-    <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-        <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-       </a>
-       <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
-        <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
-         </a>
-       
-       <script>
-          document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
-               document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-       </script>
-       
-</footer>
-</body>
+      <h1>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135</h1>
+      <nav>
+        <a href="./">Home</a>
+        ||
+        <a href="introduction.html">Introduction</a>
+        ||
+        <a href="contract.html">Contract</a>
+        ||
+        <a href="tables.html">Tables</a>
+        ||
+        <a href="forms.html">Form</a>
+        ||
+        <a href="website_evaluations.html">Website Evaluations</a>
+      </nav>
+      <nav>
+        <a href="stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
+      </nav>
+    </header>
+    <main>
+      <h2>ITIS 3135 Homepage</h2>
+      <p>This is all the content for my ITIS 3135 class.</p>
+    </main>
+    <footer>
+      <a href="https://webpages.charlotte.edu/nhayes12/">Charlotte.edu</a>
+      ||
+      <a href="https://github.com/deniablesole/deniablesole.github.io"
+        >GitHub</a
+      >
+      ||
+      <a href="https://deniablesole.github.io/">GitHub.io</a>
+      ||
+      <a
+        href="https://github.com/Deniablesole/Deniablesole.github.io/tree/main/itis3135"
+        >itis3135.io</a
+      >
+      ||
+      <a href="https://www.freecodecamp.org/NathanielHayes">FreeCodeCamp</a>
+      ||
+      <a href="https://www.codecademy.com/profiles/NathanielHayes"
+        >CodeAcademy</a
+      >
+      ||
+      <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn<br /></a>
+      <p>
+        Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a>,
+        <a
+          href="https://www.freecodecamp.org/certification/NathanielHayes/responsive-web-design"
+          >Certified in RWD</a
+        >
+        © 2024<br />
+      </p>
+      <a
+        href="https://validator.w3.org/check?uri=referer"
+        id="validation_link_html"
+      >
+        <img
+          style="border: 0; width: 88px; height: 31px"
+          src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png"
+          alt="Valid HTML!"
+        />
+      </a>
+      <a
+        href="https://jigsaw.w3.org/css-validator/check/referer"
+        id="validation_link_css"
+      >
+        <img
+          style="border: 0; width: 88px; height: 31px"
+          src="https://jigsaw.w3.org/css-validator/images/vcss"
+          alt="Valid CSS!"
+        />
+      </a>
+
+      <script>
+        document
+          .getElementById("validation_link_html")
+          .setAttribute(
+            "href",
+            "https://validator.w3.org/check?uri=" + location.href
+          );
+        document
+          .getElementById("validation_link_css")
+          .setAttribute(
+            "href",
+            "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href
+          );
+      </script>
+    </footer>
+  </body>
 </html>
