--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -1,198 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Tables</title>
-        <link rel="stylesheet" href="styles/c.css">
-    </head>
-    <body>
-        <header>
-            <h1>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135</h1>
-            <nav>
-                <a href="./">Home</a>
-                ||
-                <a href="introduction.html">Introduction</a>
-                ||
-                <a href="contract.html">Contract</a>
-                ||
-                <a href="tables.html">Tables</a>
-                ||
-                <a href="forms.html">Form</a>
-                ||
-                <a href="website_evaluations.html">Website Evaluations</a>
-            </nav>
-            <nav>
-                <a href="stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
-            </nav>
-        </header>
-        <main>
-            <h2>HTML Tables</h2>
-            <h3>My Tabular Data</h3>
-            <ol>
-                <li>Patrick Bateman patrickbateman@gmail.com 2</li>
-                <li>Sally Jones sallyjones@yahoo.com 7</li>
-                <li>Jeff Locklear jefflocklear@outlook.com 1</li>
-                <li>John Smith johnsmith@gmail.com 3</li>
-                <li>Nathaniel Hayes nathanielhayes@yahoo.com 2 </li>
-                <li>Samantha Fields samanthafields@gmail.com 5</li>
-                <li>Jack Black jackblack@outlook.com 8</li>
-            </ol>
-            <h3>Employee Data in Simple Table</h3>
-            <table>
-                <tr>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Years of Service</th>
-                </tr>
-                <tr>
-                    <td>Patrick Bateman</td>
-                    <td>patrickbateman@gmail.com</td>
-                    <td>2</td>
-                </tr>
-                <tr>
-                    <td>Sally Jones</td>
-                    <td>sallyjones@yahoo.com</td>
-                    <td>7</td>
-                </tr>
-                <tr>
-                    <td>Jeff Locklear</td>
-                    <td>jefflocklear@outlook.com</td>
-                    <td>1</td>
-                </tr>
-                <tr>
-                    <td>John Smith</td>
-                    <td>johnsmith@gmail.com</td>
-                    <td>3</td>
-                </tr>
-                <tr>
-                    <td>Nathaniel Hayes</td>
-                    <td>nathanielhayes@yahoo.com</td>
-                    <td>2</td>
-                </tr>
-                <tr>
-                    <td>Samantha Fields</td>
-                    <td>samanthafields@gmail.com</td>
-                    <td>5</td>
-                </tr>
-                <tr>
-                    <td>Jack Black</td>
-                    <td>jackblack@outlook.com</td>
-                    <td>8</td>
-                </tr>
-            </table>
-            <h3>Employee Data in Complex Table</h3>
-            <figure>
-                <figcaption>Employee Information</figcaption>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Tables</title>
+    <link rel="stylesheet" href="styles/c.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135</h1>
+      <nav>
+        <a href="./">Home</a>
+        ||
+        <a href="introduction.html">Introduction</a>
+        ||
+        <a href="contract.html">Contract</a>
+        ||
+        <a href="tables.html">Tables</a>
+        ||
+        <a href="forms.html">Form</a>
+        ||
+        <a href="website_evaluations.html">Website Evaluations</a>
+      </nav>
+      <nav>
+        <a href="stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
+      </nav>
+    </header>
+    <main>
+      <h2>HTML Tables</h2>
+      <h3>My Tabular Data</h3>
+      <ol>
+        <li>Patrick Bateman patrickbateman@gmail.com 2</li>
+        <li>Sally Jones sallyjones@yahoo.com 7</li>
+        <li>Jeff Locklear jefflocklear@outlook.com 1</li>
+        <li>John Smith johnsmith@gmail.com 3</li>
+        <li>Nathaniel Hayes nathanielhayes@yahoo.com 2</li>
+        <li>Samantha Fields samanthafields@gmail.com 5</li>
+        <li>Jack Black jackblack@outlook.com 8</li>
+      </ol>
+      <h3>Employee Data in Simple Table</h3>
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Years of Service</th>
+        </tr>
+        <tr>
+          <td>Patrick Bateman</td>
+          <td>patrickbateman@gmail.com</td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>Sally Jones</td>
+          <td>sallyjones@yahoo.com</td>
+          <td>7</td>
+        </tr>
+        <tr>
+          <td>Jeff Locklear</td>
+          <td>jefflocklear@outlook.com</td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>John Smith</td>
+          <td>johnsmith@gmail.com</td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>Nathaniel Hayes</td>
+          <td>nathanielhayes@yahoo.com</td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>Samantha Fields</td>
+          <td>samanthafields@gmail.com</td>
+          <td>5</td>
+        </tr>
+        <tr>
+          <td>Jack Black</td>
+          <td>jackblack@outlook.com</td>
+          <td>8</td>
+        </tr>
+      </table>
+      <h3>Employee Data in Complex Table</h3>
+      <figure>
+        <figcaption>Employee Information</figcaption>
 
-                <table class="employee-table">
-                    <tr>
-                        <th scope="col" id="department-header">Department</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Email</th>
-                        <th scope="col">Years of Service</th>
-                        <th scope="col">Monthly Salary</th>
-                    </tr>
-                    <tr>
-                        <td headers="department-header">Marketing</td>
-                        <td>Patrick Bateman</td>
-                        <td>patrickbateman@gmail.com</td>
-                        <td>2</td>
-                        <td>$2100</td>
-                    </tr>
-                    <tr>
-                        <td headers="department-header">Marketing</td>
-                        <td>Samantha Fields</td>
-                        <td>samanthafields@gmail.com</td>
-                        <td>5</td>
-                        <td>$2100</td>
-                    </tr>
-                    <tr>
-                        <td headers="department-header">Sales</td>
-                        <td>Sally Jones</td>
-                        <td>sallyjones@yahoo.com</td>
-                        <td>7</td>
-                        <td>$2250</td>
-                    </tr>
-                    <tr>
-                        <td headers="department-header">IT</td>
-                        <td>Jeff Locklear</td>
-                        <td>jefflocklear@outlook.com</td>
-                        <td>1</td>
-                        <td>$2575</td>
-                    </tr>
-                    <tr>
-                        <td headers="department-header">IT</td>
-                        <td>John Smith</td>
-                        <td>johnsmith@gmail.com</td>
-                        <td>3</td>
-                        <td>$2575</td>
-                    </tr>
-                    <tr>
-                        <td headers="department-header">Owner</td>
-                        <td>Nathaniel Hayes</td>
-                        <td>nathanielhayes@yahoo.com</td>
-                        <td>25</td>
-                        <td>$5000</td>
-                    </tr>
-                    <tr>
-                        <td headers="department-header">Management</td>
-                        <td>Jack Black</td>
-                        <td>jackblack@outlook.com</td>
-                        <td>12</td>
-                        <td>$3150</td>
-                    </tr>
-                    <tr class="total-row">
-                        <th colspan="3">Total Years of Service</th>
-                        <td>54</td>
-                        <td></td>
-                    </tr>
-                    <tr class="total-row">
-                        <th colspan="4">Total Monthly Salary</th>
-                        <td>$19750</td>
-                    </tr>
-                </table>
-            </figure>
-        </main>
-        <footer>
-            <a href="https://webpages.charlotte.edu/nhayes12/">Charlotte.edu</a>
-            ||
-            <a
-                href="https://github.com/deniablesole/deniablesole.github.io">GitHub</a>
-            ||
-            <a href="https://deniablesole.github.io/">GitHub.io</a>
-            ||
-            <a
-                href="https://github.com/Deniablesole/Deniablesole.github.io/tree/main/itis3135">itis3135.io</a>
-            ||
-            <a
-                href="https://www.freecodecamp.org/NathanielHayes">FreeCodeCamp</a>
-            ||
-            <a
-                href="https://www.codecademy.com/profiles/NathanielHayes">CodeAcademy</a>
-            ||
-            <a
-                href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn<br></a>
-            <p>Designed by: <a href="hayesdesigns.com/index.html">Hayes
-                    Designs</a> © 2024<br></p>
-            <a href="https://validator.w3.org/check?uri=referer"
-                id="validation_link_html">
-                <img style="border:0;width:88px;height:31px"
-                    src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png"
-                    alt="Valid HTML!">
-            </a>
-            <a href="https://jigsaw.w3.org/css-validator/check/referer"
-                id="validation_link_css">
-                <img style="border:0;width:88px;height:31px"
-                    src="https://jigsaw.w3.org/css-validator/images/vcss"
-                    alt="Valid CSS!">
-            </a>
+        <table class="employee-table">
+          <tr>
+            <th scope="col" id="department-header">Department</th>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Years of Service</th>
+            <th scope="col">Monthly Salary</th>
+          </tr>
+          <tr>
+            <td headers="department-header">Marketing</td>
+            <td>Patrick Bateman</td>
+            <td>patrickbateman@gmail.com</td>
+            <td>2</td>
+            <td>$2100</td>
+          </tr>
+          <tr>
+            <td headers="department-header">Marketing</td>
+            <td>Samantha Fields</td>
+            <td>samanthafields@gmail.com</td>
+            <td>5</td>
+            <td>$2100</td>
+          </tr>
+          <tr>
+            <td headers="department-header">Sales</td>
+            <td>Sally Jones</td>
+            <td>sallyjones@yahoo.com</td>
+            <td>7</td>
+            <td>$2250</td>
+          </tr>
+          <tr>
+            <td headers="department-header">IT</td>
+            <td>Jeff Locklear</td>
+            <td>jefflocklear@outlook.com</td>
+            <td>1</td>
+            <td>$2575</td>
+          </tr>
+          <tr>
+            <td headers="department-header">IT</td>
+            <td>John Smith</td>
+            <td>johnsmith@gmail.com</td>
+            <td>3</td>
+            <td>$2575</td>
+          </tr>
+          <tr>
+            <td headers="department-header">Owner</td>
+            <td>Nathaniel Hayes</td>
+            <td>nathanielhayes@yahoo.com</td>
+            <td>25</td>
+            <td>$5000</td>
+          </tr>
+          <tr>
+            <td headers="department-header">Management</td>
+            <td>Jack Black</td>
+            <td>jackblack@outlook.com</td>
+            <td>12</td>
+            <td>$3150</td>
+          </tr>
+          <tr class="total-row">
+            <th colspan="3">Total Years of Service</th>
+            <td>54</td>
+            <td></td>
+          </tr>
+          <tr class="total-row">
+            <th colspan="4">Total Monthly Salary</th>
+            <td>$19750</td>
+          </tr>
+        </table>
+      </figure>
+    </main>
+    <footer>
+      <a href="https://webpages.charlotte.edu/nhayes12/">Charlotte.edu</a>
+      ||
+      <a href="https://github.com/deniablesole/deniablesole.github.io"
+        >GitHub</a
+      >
+      ||
+      <a href="https://deniablesole.github.io/">GitHub.io</a>
+      ||
+      <a
+        href="https://github.com/Deniablesole/Deniablesole.github.io/tree/main/itis3135"
+        >itis3135.io</a
+      >
+      ||
+      <a href="https://www.freecodecamp.org/NathanielHayes">FreeCodeCamp</a>
+      ||
+      <a href="https://www.codecademy.com/profiles/NathanielHayes"
+        >CodeAcademy</a
+      >
+      ||
+      <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn<br /></a>
+      <p>
+        Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a>,
+        <a
+          href="https://www.freecodecamp.org/certification/NathanielHayes/responsive-web-design"
+          >Certified in RWD</a
+        >
+        © 2024<br />
+      </p>
+      <a
+        href="https://validator.w3.org/check?uri=referer"
+        id="validation_link_html"
+      >
+        <img
+          style="border: 0; width: 88px; height: 31px"
+          src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png"
+          alt="Valid HTML!"
+        />
+      </a>
+      <a
+        href="https://jigsaw.w3.org/css-validator/check/referer"
+        id="validation_link_css"
+      >
+        <img
+          style="border: 0; width: 88px; height: 31px"
+          src="https://jigsaw.w3.org/css-validator/images/vcss"
+          alt="Valid CSS!"
+        />
+      </a>
 
-            <script>
-          document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
-               document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-       </script>
-
-        </footer>
-    </body>
+      <script>
+        document
+          .getElementById("validation_link_html")
+          .setAttribute(
+            "href",
+            "https://validator.w3.org/check?uri=" + location.href
+          );
+        document
+          .getElementById("validation_link_css")
+          .setAttribute(
+            "href",
+            "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href
+          );
+      </script>
+    </footer>
+  </body>
 </html>
