--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -1,105 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Website Evaluations</title>
-    <link rel="stylesheet" href="styles/b.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Website Evaluations
+    </title>
+    <link rel="stylesheet" href="styles/b.css" />
     <style>
-       li {
-      position: relative;
-      padding-left: 20px; 
-      margin-bottom: 10px;
-    }
+      li {
+        position: relative;
+        padding-left: 20px;
+        margin-bottom: 10px;
+      }
 
-    ul {
-      list-style: none;
-      padding: 0;
-    }
+      ul {
+        list-style: none;
+        padding: 0;
+      }
 
-    li::before {
-      content: "•"; 
-      color: #000; 
-      font-size: 20px; 
-      position: relative;
-      left: 0;
-    }
-      </style>
-</head>
-<body>
+      li::before {
+        content: "•";
+        color: #000;
+        font-size: 20px;
+        position: relative;
+        left: 0;
+      }
+    </style>
+  </head>
+  <body>
     <header>
-        <h1>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135</h1>
-        <nav>
-            <a href="./">Home</a>
-            ||
-            <a href="introduction.html">Introduction</a>
-            ||
-            <a href="contract.html">Contract</a>
-            ||
-            <a href="tables.html">Tables</a>
-            ||
-            <a href="forms.html">Form</a>
-            ||
-            <a href="website_evaluations.html">Website Evaluations</a>
-        </nav>
-        <nav>
-            <a href="stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
-        </nav>
-        </header>
-<main>
-    <h2>Website Evaluations</h2>
-    <section>
+      <h1>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135</h1>
+      <nav>
+        <a href="./">Home</a>
+        ||
+        <a href="introduction.html">Introduction</a>
+        ||
+        <a href="contract.html">Contract</a>
+        ||
+        <a href="tables.html">Tables</a>
+        ||
+        <a href="forms.html">Form</a>
+        ||
+        <a href="website_evaluations.html">Website Evaluations</a>
+      </nav>
+      <nav>
+        <a href="stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
+      </nav>
+    </header>
+    <main>
+      <h2>Website Evaluations</h2>
+      <section>
         <h3><a href="http://www.amazon.com">Amazon</a></h3>
-        <p>Largest e-commerce website allowing you to get almost anything delivered to your home.</p>
+        <p>
+          Largest e-commerce website allowing you to get almost anything
+          delivered to your home.
+        </p>
         <p>CRAP Principles</p>
         <ul>
-            <li>Contrast</li>
-            <li>Repetition</li>
-            <li>Alignment</li>
-            <li>Proximity</li>
+          <li>Contrast</li>
+          <li>Repetition</li>
+          <li>Alignment</li>
+          <li>Proximity</li>
         </ul>
-        <p>This website follows all of the CRAP principles. The contrast is well done, everything is aligned, products of a similar category are grouped together which follows repetition and proximity.</p>
-        </section>
-        <section>
-            <h3><a href="http://web.archive.org/web/20041204042147/http://www.panix.com/~clays/biff/">Panix</a></h3>
-            <p>This is someone's personal website I found made in 2004.</p>
-            <p>CRAP Principles</p>
-            <ul>
-                <li>Contrast</li>
-                <li>Repetition</li>
-                <li>Alignment</li>
-                <li>Proximity</li>
-            </ul>
-            <p>This website follows none of the CRAP principles. The contrast is bad making the website hard to read. There is no repetition on the page. Everything is not aligned, except half the page is left justified. Also the proximity is not good.</p>
-        </section>
-</main>
-<footer>
-    <a href="https://webpages.charlotte.edu/nhayes12/">Charlotte.edu</a>
-    ||
-    <a href="https://github.com/deniablesole/deniablesole.github.io">GitHub</a>
-    ||
-    <a href="https://deniablesole.github.io/">GitHub.io</a>
-    ||
-    <a href="https://github.com/Deniablesole/Deniablesole.github.io/tree/main/itis3135">itis3135.io</a>
-    ||
-    <a href="https://www.freecodecamp.org/NathanielHayes">FreeCodeCamp</a>
-    ||
-    <a href="https://www.codecademy.com/profiles/NathanielHayes">CodeAcademy</a>
-    ||
-    <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn<br></a>
-    <p>Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a> © 2024<br></p>
-    <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-        <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-       </a>
-       <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
-        <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
-         </a>
-       
-       <script>
-          document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
-               document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-       </script>
-       
-</footer>
-</body>
+        <p>
+          This website follows all of the CRAP principles. The contrast is well
+          done, everything is aligned, products of a similar category are
+          grouped together which follows repetition and proximity.
+        </p>
+      </section>
+      <section>
+        <h3>
+          <a
+            href="http://web.archive.org/web/20041204042147/http://www.panix.com/~clays/biff/"
+            >Panix</a
+          >
+        </h3>
+        <p>This is someone's personal website I found made in 2004.</p>
+        <p>CRAP Principles</p>
+        <ul>
+          <li>Contrast</li>
+          <li>Repetition</li>
+          <li>Alignment</li>
+          <li>Proximity</li>
+        </ul>
+        <p>
+          This website follows none of the CRAP principles. The contrast is bad
+          making the website hard to read. There is no repetition on the page.
+          Everything is not aligned, except half the page is left justified.
+          Also the proximity is not good.
+        </p>
+      </section>
+    </main>
+    <footer>
+      <a href="https://webpages.charlotte.edu/nhayes12/">Charlotte.edu</a>
+      ||
+      <a href="https://github.com/deniablesole/deniablesole.github.io"
+        >GitHub</a
+      >
+      ||
+      <a href="https://deniablesole.github.io/">GitHub.io</a>
+      ||
+      <a
+        href="https://github.com/Deniablesole/Deniablesole.github.io/tree/main/itis3135"
+        >itis3135.io</a
+      >
+      ||
+      <a href="https://www.freecodecamp.org/NathanielHayes">FreeCodeCamp</a>
+      ||
+      <a href="https://www.codecademy.com/profiles/NathanielHayes"
+        >CodeAcademy</a
+      >
+      ||
+      <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn<br /></a>
+      <p>
+        Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a>,
+        <a
+          href="https://www.freecodecamp.org/certification/NathanielHayes/responsive-web-design"
+          >Certified in RWD</a
+        >
+        © 2024<br />
+      </p>
+      <a
+        href="https://validator.w3.org/check?uri=referer"
+        id="validation_link_html"
+      >
+        <img
+          style="border: 0; width: 88px; height: 31px"
+          src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png"
+          alt="Valid HTML!"
+        />
+      </a>
+      <a
+        href="https://jigsaw.w3.org/css-validator/check/referer"
+        id="validation_link_css"
+      >
+        <img
+          style="border: 0; width: 88px; height: 31px"
+          src="https://jigsaw.w3.org/css-validator/images/vcss"
+          alt="Valid CSS!"
+        />
+      </a>
+
+      <script>
+        document
+          .getElementById("validation_link_html")
+          .setAttribute(
+            "href",
+            "https://validator.w3.org/check?uri=" + location.href
+          );
+        document
+          .getElementById("validation_link_css")
+          .setAttribute(
+            "href",
+            "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href
+          );
+      </script>
+    </footer>
+  </body>
 </html>
