--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -55,7 +55,7 @@
         </header>
 
         <main>
-            <h1>Hayes Designs</h1>
+            <h1>First Scripts</h1>
             <h3 id="currentDateTime"></h3>
 
             <form id="userInputForm">
