--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -6,7 +6,7 @@
     <title>
       Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Introduction
     </title>
-    <link rel="stylesheet" href="styles/b.css" />
+    <link rel="stylesheet" href="styles/default.css" />
   </head>
   <body>
     <header>
