--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -6,7 +6,7 @@
     <title>
       Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Website Evaluations
     </title>
-    <link rel="stylesheet" href="styles/b.css" />
+    <link rel="stylesheet" href="styles/default.css" />
     <style>
       li {
         position: relative;
