--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Contract</title>
-    <link rel="stylesheet" href="styles/b.css" />
+    <link rel="stylesheet" href="styles/default.css" />
   </head>
   <body>
     <header>
