--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Hayes
             Designs</title>
-        <link rel="stylesheet" href="styles/b.css"/>
+        <link rel="stylesheet" href="styles/default.css"/>
 
         <style>
          body {
