--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Homepage</title>
-    <link rel="stylesheet" href="styles/b.css" />
+    <link rel="stylesheet" href="styles/default.css"/>
   </head>
   <body>
     <header>
@@ -18,8 +18,7 @@
       <div data-include="components/footer.html"></div>
     </footer>
     <script>
-      var validationLinkHtml = document.getElementById("validation_link_html");
-      var validationLinkCss = document.getElementById("validation_link_css");
+     
     
       if (validationLinkHtml) {
         validationLinkHtml.setAttribute(
