fixed byo intro title

--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -96,7 +96,7 @@
 
   <main>
     <body>
-
+      <h2>BYO INTRO</h2>
       <form id="myForm" onsubmit="submitForm(event)">
           <h2>Form Example</h2>
   
