added wcag and accumulus validators

--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -7,6 +7,7 @@
       Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Introduction
     </title>
     <link rel="stylesheet" href="styles/default.css" />
+    <script src="https://farawayforests.com/cdn/accumulus/accumulus.min.js"></script>
   </head>
   <body>
     <header>
