--- a/itis3135/about.html
+++ b/itis3135/about.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || About</title>
         <link rel="stylesheet" href="styles/default.css" />
+        <script src="https://farawayforests.com/cdn/accumulus/accumulus.min.js"></script>
     </head>
     <body>
 
@@ -39,6 +40,7 @@
             "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href
           );
         }
+       
       </script>
     <script src="scripts/HTMLInclude.min.js"></script>
 
