--- a/itis3135/calculator_fcc.html
+++ b/itis3135/calculator_fcc.html
@@ -46,6 +46,7 @@ button:hover {
     background-color: #ccc;
 }
     </style>
+     <script src="https://farawayforests.com/cdn/accumulus/accumulus.min.js"></script>
   </head>
   <body>
     <header>
