--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -47,6 +47,7 @@
 
        
     </style>
+     <script src="https://farawayforests.com/cdn/accumulus/accumulus.min.js"></script>
     </head>
     <body>
 
