--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -22,6 +22,7 @@
             text-align: center;
         }
     </style>
+     <script src="https://farawayforests.com/cdn/accumulus/accumulus.min.js"></script>
   </head>
   <body>
     <header>
